pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotAssignFixedProperty1.pkl
class Bird {
  fixed name: String = "Hawk"
}

p: Bird = new {
  // Using a non-constant node causes this to turn into a TypeCheckedPropertyNode
  local _name = "Penguin"
  name = _name
}
